feat/107 펀딩 crud에 맞춰서 리팩토링